2008-06-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/atomtyp.txt, data/atomtyp.h: Add hybridization rules for
	Si, Al, Ge, As, Se, and Te. (Atom typing and valence rules need to
	be generalized.) Fixes problems with adding hydrogens to Si
	uncovered in Avogadro.

2005-06-02  Marcus D. Hanwell  <marcus@cryos.org>

	* src/atom.cpp, src/mol.cpp: Added extra checks in AddHydrogens for
	finite hydrogen coordinates. Also added some extra checks in the
	GetNewBondVector function to check for sane numbers.

2008-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Makefile.am, Makefile.in: Correct small automake typo with
	"autoconf" libtool macro directory.

	* configure: Regenerated using autogen.sh.

	* include/openbabel/grid.h: Fix compiler warning -- make sure to
	return values in all methods.

	* src/forcefield.cpp: Fix compiler warning "default" not "dafault"
	in switch statements.

	* src/formats/qchemformat.cpp, src/formats/gamessformat.cpp,
	src/formats/gaussformat.cpp, src/formats/fchkformat.cpp: Add
	support for reading dipole moments using OBVectorData.

2008-06-01  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/atomrecord.cpp: Call OBAtom::ForceImplH() for all atoms.
	Loading a pdb file and calling OBMol::AddHydrogens() added only on
	hydrogen.

2005-05-31  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Fixed two of the three remaining
	std::vectors based on examples found in Krugle code search

2005-05-30  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Fixed most of the std::vectors by using
	weird macro described in std_vector.i in the SWIG distribution

2005-05-30  Marcus D. Hanwell  <marcus@cryos.org>

	* configure, configure.in: Stop the wx-config test being called when
	the wx-gui is not enabled - bug 1979603.

2005-05-30  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Added header file to SWIG wrapper. Also